# datamanagerpy

./: .Renviron  .gitignore
datamanagerR/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
datamanagerR/R/: config.R  get_files.R
datamanagerR/inst/: config.json  file_cache.json
datamanagerR/inst/python/: DataFile.py
datamanagerR/man/: get_download_dirpath.Rd  get_web_file.Rd  set_download_dirpath.Rd
datamanagerR/scripts/: pkd_development.R
datamanagerR/tests/: testthat.R
datamanagerR/tests/testthat/: test-config.R  test-get_files.R
datamanagerpy/: README.md  pyproject.toml  requirements.txt  setup.py
datamanagerpy/datamanagerpy/: cache.py  data_file.py  pkg_utils.py
datamanagerpy/datamanagerpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datamanagerpy/datamanagerpy/settings/: cache.json  config.json
datamanagerpy/scripts/: development.py
datamanagerpy/tests/: context.py  test1.py
scripts/: check_import_pkg_to_r.R  context.py  development.py  how_to_py_project
